--- a/templates/beranda.html
+++ b/templates/beranda.html
@@ -1,5 +1,7 @@
 {% include 'header.html' %}
 
+	<link rel="stylesheet" href="../static/assets/css/style-landing.css">
+
 	<section class="hero-wrap js-fullheight" style="background-image: url('../static/assets/img/bg_4.png');"
 		data-section="home">
 		<div class="overlay"></div>
@@ -35,7 +37,7 @@
 							<p>Tujuan utama dari pembentukan fanbase ini adalah untuk menyatukan para penggemar JKT48 di
 								Pulau Lombok, berbagi pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu
 								JKT48.</p>
-							<p><a href="#section-counter" class="btn btn-primary" data-nav-section="about">Read more</a>
+							<p><a href="/about" class="btn btn-primary" data-nav-section="about">Read more</a>
 							</p>
 						</div>
 					</div>
@@ -44,324 +46,61 @@
 		</div>
 	</section>
 
-	<section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="section-counter" data-section="about">
-		<div class="container">
-			<div class="row d-flex">
-				<div class="col-md-6 col-lg-4 d-flex">
-					<div class="img d-flex align-self-stretch align-items-center"
-						style="background-image:url(../static/assets/img/about-2.png);">
-
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-8 pl-lg-5 py-5">
-					<div class="row justify-content-start pb-3">
-						<div class="col-md-12 heading-section ftco-animate">
-							<span class="subheading">Welcome</span>
-							<h2 class="mb-4">FJKT berdiri sejak 2023</h2>
-							<p>Sejarah pembentukan fanbase FJKT48 Lombok dimulai ketika para penggemar JKT48 di Pulau
-								Lombok bertemu melalui komentar di FYP TikTok. Interaksi ini kemudian beralih ke pesan
-								WhatsApp pada tanggal 12 Mei 2023. </p>
-							<p>Selanjutnya, para penggemar ini memutuskan untuk bertemu secara langsung pada tanggal 15
-								Mei 2023 di sebuah angkringan bernama Angkringan Bejo (Angjo).</p>
-							<p>Dalam pertemuan tersebut, ditetapkan pembentukan komunitas fans JKT48 Pulau Lombok
-								beserta para pengurusnya.</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
-							<div class="block-18 text-center p-4 mb-4 align-self-stretch d-flex">
-								<div class="text">
-									<strong class="number" data-number="1">0</strong>
-									<span style="color: #a5a7a2;">Years of service</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
-							<div class="block-18 text-center py-4 px-3 mb-4 align-self-stretch d-flex">
-								<div class="text">
-									<strong class="number" data-number="100">0</strong>
-									<span style="color: #a5a7a2;">Active Members</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
-							<div class="block-18 text-center py-4 px-3 mb-4 align-self-stretch d-flex">
-								<div class="text">
-									<strong class="number" data-number="35">0</strong>
-									<span style="color: #a5a7a2;">Fan Meets Hosted</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
-							<div class="block-18 text-center py-4 px-3 mb-4 align-self-stretch d-flex">
-								<div class="text">
-									<strong class="number" data-number="1000">0</strong>
-									<span style="color: #a5a7a2;">Social Media Followers</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+	<section class="about" id="about" style="margin-top: -9rem">
+		<div class="section__container about__container">
+		  <div class="about__grid">
+			<div class="about__image">
+			  <img src="../static/assets/img/product/banner-1.png" alt="about" />
 			</div>
+			<div class="about__card">
+			  <span><i class="ri-user-line"></i></span>
+			  <h4>Koleksi Terbaru</h4>
+				<p>
+					Temukan koleksi terbaru merchandise JKT48 yang eksklusif dan penuh gaya
+				</p>
+			</div>
+			<div class="about__image">
+			  <img src="../static/assets/img/product/banner-2.png" alt="about" />
+			</div>
+			<div class="about__card">
+			  <span><i class="ri-calendar-check-line"></i></span>
+			  <h4>Produk Unggulan</h4>
+				<p>
+					Nikmati produk unggulan dari fanbase JKT48 yang berkualitas
+				</p>
+			</div>
+		  </div>
+		  <div class="about__content">
+			<p class="section__subheader">Merchandise</p>
+			<h2 class="section__header">Temukanlah Merchandise Menarik</h2>
+			<p class="section__description">
+                Selamat datang di halaman resmi merchandise JKT48! Di sini, 
+				Anda dapat menemukan berbagai produk eksklusif dari fanbase JKT48 yang dirancang khusus untuk para penggemar setia. 
+				Jelajahi koleksi kami dan tunjukkan dukungan Anda dengan bangga!
+            </p>
+			<a class="btn" type="button" href="/merchandise">Read more</a>
+		  </div>
 		</div>
 	</section>
 
-	<section class="ftco-section" data-section="team" id="team">
-		<div class="container-fluid p-0">
-			<div class="row no-gutters justify-content-center pb-5">
-				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">Members</span>
-					<h2 class="mb-4">Meet Our Team</h2>
-					<p>Perkenalkan individu berbakat yang berkontribusi pada komunitas kami. Pelajari lebih lanjut
-						tentang wajah-wajah di balik layar.</p>
-				</div>
-			</div>
-			<div class="row no-gutters">
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/team-1.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Lloyd Wilson</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/team-2.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Rachel Parker</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/team-3.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Ian Smith</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/team-4.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Alicia Henderson</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/staff-1.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Lloyd Wilson</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/staff-2.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Rachel Parker</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/staff-3.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Ian Smith</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="staff">
-						<div class="img-wrap d-flex align-items-stretch">
-							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/staff-4.jpg);"></div>
-						</div>
-						<div class="text d-flex align-items-center pt-3 text-center">
-							<div>
-								<span class="position mb-2">Member</span>
-								<h3 class="mb-4">Alicia Henderson</h3>
-								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+	<section class="intro" style="margin-top: 6rem" data-section="home">
+		<div class="section__container intro__container">
+		  <div class="intro__cotent">
+			<p class="section__subheader">Gallery</p>
+			<h2 class="section__header">Jelajahi Galeri Menarik Kami</h2>
+			<p class="section__description">
+				Telusuri dunia keindahan visual dari galeri kami, menampilkan koleksi foto dan media yang dipilih dengan cermat yang menangkap esensi acara komunitas. 
+				Masuki ruang seni kami, di mana ekspresi kreatif para penggemar menghiasi dinding, merayakan semangat dan bakat dalam komunitas kami.
+			</p>
+			<a class="btn" type="button" href="/gallery">Read more</a>
+		  </div>
+		  <div class="intro__video">
+			<video src="../static/assets/img/luxury.mp4" autoplay muted loop></video>
+		  </div>
 		</div>
 	</section>
 
-	<section class="testimony-section" data-section="message" id="message">
-		<div class="container">
-			<div class="row ftco-animate justify-content-center">
-				<div class="col-md-12 d-flex align-items-center">
-					<div class="carousel-testimony owl-carousel">
-						<div class="item">
-							<div class="testimony-wrap d-flex align-items-stretch">
-								<div class="user-img d-flex align-self-stretch"
-									style="background-image: url(../static/assets/img/testimony-1.jpg)">
-								</div>
-								<div class="text d-flex align-items-center">
-									<div>
-										<div class="icon-quote">
-											<span class="icon-quote-left"></span>
-										</div>
-										<p class="mb-4">Menyatukan para penggemar JKT48 di Pulau Lombok, berbagi
-											pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu JKT48.</p>
-										<p class="name">Dimas...</p>
-										<span class="position">Ketua, Founder</span>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap d-flex align-items-stretch">
-								<div class="user-img d-flex align-self-stretch"
-									style="background-image: url(../static/assets/img/testimony-2.jpg)">
-								</div>
-								<div class="text d-flex align-items-center">
-									<div>
-										<div class="icon-quote">
-											<span class="icon-quote-left"></span>
-										</div>
-										<p class="mb-4">Menyatukan para penggemar JKT48 di Pulau Lombok, berbagi
-											pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu JKT48.</p>
-										<p class="name">Rasya...</p>
-										<span class="position">Wakil Ketua, Founder</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section contact-section" data-section="contact" id="contact">
+	<section class="ftco-section contact-section" data-section="home" id="contact" style="margin-top: -2rem">
 		<div class="container">
 			<div class="row justify-content-center mb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
