--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="../static/assets/css/style-login.css">
 <div id="SignIn" class="tabcontent">
     <h3 style="text-align: center;">Sign In</h3>
     <form id="signInForm" action="/login" method="post">
@@ -6,7 +7,8 @@
         <label for="password"><i class="fas fa-lock"></i> Password</label>
         <input type="password" id="password" name="password" required>
         <div class="button-container" style="justify-content: center;">
-            <button type="submit">Login</button>
+            <button type="submit">Loginnnn</button>
+            <button class="registrasi">Loginn</button>
         </div>
     </form>
     <p style="text-align: center; margin-top: 15px;">Belum punya akun?
