--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,7 +16,7 @@
         <div class="ftco-footer-widget mb-4 ml-md-4">
           <h2 class="ftco-heading-2">Links</h2>
           <ul class="list-unstyled">
-            <li><a href="/dashboard"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+            <li><a href="/beranda"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
             <li><a href="/about"><span class="icon-long-arrow-right mr-2"></span>About Us</a></li>
             <li><a href="/gallery"><span class="icon-long-arrow-right mr-2"></span>Gallery</a></li>
             <li><a href="/merchandise"><span class="icon-long-arrow-right mr-2"></span>Merchandise</a></li>
