--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
     <title>FJKT48 Lombok</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	  <link href="../static/assets/img/logo_3.png" rel="shortcut icon" type="image/x-icon" />
+	  <link href="../static/assets/img/logo_4.png" rel="shortcut icon" type="image/x-icon" />
     
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -23,6 +23,34 @@
     <link rel="stylesheet" href="../static/assets/css/flaticon.css">
     <link rel="stylesheet" href="../static/assets/css/icomoon.css">
     <link rel="stylesheet" href="../static/assets/css/style.css">
+    <style>
+      .user-icon {
+          position: fixed;
+          top: 10px;
+          right: 10px;
+          cursor: pointer;
+      }
+      .user-icon img {
+          width: 40px;
+          height: 40px;
+      }
+
+      #user-account .login-text {
+          display: none;
+      }
+
+      /* Media query to change icon to text at smaller screen sizes */
+      @media (max-width: 650px) {
+          #user-account .fas.fa-user {
+              display: none;
+          }
+
+          #user-account .login-text {
+              display: inline;
+              color: white; /* Warna teks Login */
+          }
+      }
+    </style>
   </head>
   <body>
 	  
@@ -37,13 +65,13 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a href="/dashboard" class="nav-link" data-nav-section="home"><span>Home</span></a></li>
+	          <li class="nav-item"><a href="/beranda" class="nav-link" data-nav-section="home"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="/gallery" class="nav-link" data-nav-section="gallery"><span>Gallery</span></a></li>
 	          <li class="nav-item"><a href="/about" class="nav-link" data-nav-section="about"><span>About Us</span></a></li>
 	          <li class="nav-item"><a href="/merchandise" class="nav-link" data-nav-section="merchandise"><span>Merchandise</span></a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link" data-nav-section="contact"><span>Contact</span></a></li>
-            <li class="nav-item ml-auto">
-              <a href="#" class="nav-link" id="user-account"><span><i class="fas fa-user"></i></span></a>
+            <li class="nav-item">
+              <a href="#" class="nav-link" id="user-account"><span><i class="fas fa-user"></i> <span class="login-text">Logout</span></span></a>
             </li>
           </ul>
 	      </div>
