--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -1,5 +1,7 @@
 {% include 'header.html' %}
 
+    <link rel="stylesheet" href="../static/assets/css/style-landing.css">
+
     <section class="ftco-section bg-light" data-section="merchandise">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
@@ -8,94 +10,44 @@
               <h2 class="mb-4">See Our Products</h2>
               <p>Yuk, lengkapi koleksimu dengan berbagai merchandise kece dari Fanbase JKT48 Lombok!</p>
             </div>
+            <div class="trending">
+              <div class="trending_content">
+                <p class="trending_p">Product</p>
+                <h2 class="trending_title">Exclusive JKT48 Merchandise!</h2>
+                <a href="#shop" class="trending_btn">Shop Now!</a>
+              </div>
+              <div class="img_conta">
+                <img src="../static/assets/img/product/banner-2.png" alt="header" class="img_large" />
+                <img src="../static/assets/img/product/banner-1.png" alt="header" class="img_small" />
+              </div>
+            </div>
           </div>
-          <div class="row d-flex">
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry justify-content-end">
-                    <div class="img">
-                        <a href="../static/assets/img/image_1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                            <img src="../static/assets/img/image_1.jpg" class="block-20" alt="Colorlib Template">
-                        </a>
-                    </div> 
-                <div class="text mt-3 float-right d-block">
-                    <div class="d-flex align-items-center pt-2 mb-4 topp">
-                        <div class="one mr-3">
-                            <span class="day">10</span>
+          <div class="row justify-content-center pb-5" style="margin-top: -9rem; margin-bottom: -12rem;">
+            <section class="room__container" id="room">
+              <div class="room__grid">
+                {% for item in merchandise %}
+                    <div class="room__card">
+                        <div class="img">
+                            <a href="../static/assets/img/product/{{item.gambar}}" class="icon image-popup d-flex justify-content-center align-items-center" >
+                                <img src="../static/assets/img/product/{{item.gambar}}" class="block-20" alt="Colorlib Template" style="height: 450px;">
+                            </a>
                         </div>
-                        <div class="two">
-                            <span class="yr">2024</span>
-                            <span class="mos">May</span>
+                        <div class="room__card__details">
+                            <div>
+                                <h4>{{item.nama}}</h4>
+                                <p>{{item.deskripsi}}</p>
+                                <div class="d-flex align-items-center mt-4 meta">
+                                    <p class="mb-0"><a href="/beli?nama={{item.nama}}&harga={{item.harga}}" class="btn btn-primary btn-small">Contact <span class="ion-logo-whatsapp"></span></a></p>
+                                    <h3 class="ml-auto mb-0">Rp. {{item.harga}}</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                  <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                  <div class="d-flex align-items-center mt-4 meta">
-                      <p class="mb-0"><a href="#" class="btn btn-secondary">Contact <span class="ion-logo-whatsapp"></span></a></p>
-                      <p class="ml-auto mb-0" style="font-weight: bold; font-size: 17px; color: black;">
-                        Rp. 344.500,00
-                      </p>                      
-                  </div>
-                </div>
+                    {% endfor %}
               </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry justify-content-end">
-                <div class="img">
-                    <a href="../static/assets/img/image_3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <img src="../static/assets/img/image_3.jpg" class="block-20" alt="Colorlib Template">
-                    </a>
-                </div> 
-                <div class="text mt-3 float-right d-block">
-                    <div class="d-flex align-items-center pt-2 mb-4 topp">
-                      <div class="one mr-3">
-                          <span class="day">10</span>
-                      </div>
-                      <div class="two">
-                          <span class="yr">2024</span>
-                          <span class="mos">May</span>
-                      </div>
-                    </div>
-                  <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                  <div class="d-flex align-items-center mt-4 meta">
-                      <p class="mb-0"><a href="#" class="btn btn-secondary">Contact <span class="ion-logo-whatsapp"></span></a></p>
-                      <p class="ml-auto mb-0" style="font-weight: bold; font-size: 17px; color: black;">
-                        Rp. 344.500,00
-                      </p>                      
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 d-flex ftco-animate">
-              <div class="blog-entry justify-content-end">
-                <div class="img">
-                    <a href="../static/assets/img/image_4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <img src="../static/assets/img/image_4.jpg" class="block-20" alt="Colorlib Template">
-                    </a>
-                </div> 
-                <div class="text mt-3 float-right d-block">
-                    <div class="d-flex align-items-center pt-2 mb-4 topp">
-                      <div class="one mr-3">
-                          <span class="day">10</span>
-                      </div>
-                      <div class="two">
-                          <span class="yr">2024</span>
-                          <span class="mos">May</span>
-                      </div>
-                    </div>
-                  <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                  <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                  <div class="d-flex align-items-center mt-4 meta">
-                      <p class="mb-0"><a href="#" class="btn btn-secondary">Contact <span class="ion-logo-whatsapp"></span></a></p>
-                      <p class="ml-auto mb-0" style="font-weight: bold; font-size: 17px; color: black;">
-                        Rp. 344.500,00
-                      </p>                      
-                  </div>
-                </div>
-              </div>
-            </div>
+            </section>
           </div>
         </div>
-      </section>
+    </section>
 		
 {% include 'footer.html' %}
