isi data about us

--- a/templates/about.html
+++ b/templates/about.html
@@ -79,7 +79,7 @@
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
 							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/team-1.jpg);"></div>
+								style="background-image: url(../static/assets/img/leli.jpeg);"></div>
 						</div>
 						<div class="text d-flex align-items-center pt-3 text-center">
 							<div>
@@ -88,9 +88,6 @@
 								<div class="faded">
 									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
 										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
@@ -103,7 +100,7 @@
 					<div class="staff">
 						<div class="img-wrap d-flex align-items-stretch">
 							<div class="img align-self-stretch"
-								style="background-image: url(../static/assets/img/team-2.jpg);"></div>
+								style="background-image: url(../static/assets/img/ersa.jpeg);"></div>
 						</div>
 						<div class="text d-flex align-items-center pt-3 text-center">
 							<div>
@@ -112,10 +109,7 @@
 								<div class="faded">
 									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
-										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										<li class="ftco-animate"><a href="https://www.instagram.com/baiqersaa._?igsh=enJ2anF4cW1kbmZx"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
 								</div>
@@ -134,11 +128,8 @@
 								<span class="position mb-2">Bendahara</span>
 								<h3 class="mb-4">Arya</h3>
 								<div class="faded">
-									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+									<p>Bagai capit tuan krab, aku siap mencapit kas kalian dengan tersenyum karir. Ai ai ai..halo aku Arya si Bendahara Fanbase🤩</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
 										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
@@ -160,9 +151,6 @@
 								<div class="faded">
 									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
 										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
@@ -185,9 +173,6 @@
 								<div class="faded">
 									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
 										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
@@ -205,13 +190,10 @@
 						<div class="text d-flex align-items-center pt-3 text-center">
 							<div>
 								<span class="position mb-2">CO Acara</span>
-								<h3 class="mb-4">daffa</h3>
+								<h3 class="mb-4">Daffa</h3>
 								<div class="faded">
 									<p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
 									<ul class="ftco-social text-center">
-										<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-										<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a>
-										</li>
 										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
 										</li>
 									</ul>
@@ -239,10 +221,11 @@
 										<div class="icon-quote">
 											<span class="icon-quote-left"></span>
 										</div>
-										<p class="mb-4">Menyatukan para penggemar JKT48 di Pulau Lombok, berbagi
-											pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu JKT48.</p>
+										<p class="mb-4">Calon Technical Engineering yang menghabiskan masa mudanya untuk ngidol, lightstickku bersinar terang seperti orangnya, Halo aku Davi</p>
 										<p class="name">Davi</p>
 										<span class="position">Ketua, Founder</span>
+										<li class="ftco-animate"><a href="https://www.instagram.com/vi_tama.08?igsh=ZGU4b3JwdzRkdnBl"><span class="icon-instagram"></span></a>
+										</li>
 									</div>
 								</div>
 							</div>
@@ -261,6 +244,8 @@
 											pengalaman, dan menyalurkan dukungan kepada idol ibu kota yaitu JKT48.</p>
 										<p class="name">Lutfhi</p>
 										<span class="position">Wakil Ketua, Founder</span>
+										<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a>
+										</li>
 									</div>
 								</div>
 							</div>
